fix: word wrap

--- a/src/widgets/tasksList/ui/TaskCard/TaskCard.module.scss
+++ b/src/widgets/tasksList/ui/TaskCard/TaskCard.module.scss
@@ -3,7 +3,7 @@
 .card {
   display: flex;
   justify-content: space-between;
-  height: 7.5rem;
+  min-height: 7.5rem;
   padding: 2.2rem 2rem;
   font-size: 1.6rem;
   background-color: $black-light;
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     color: $primary;
+    word-break: break-all;
 
     &--completed {
       color: $success;
